rcli (0.5.1-1) unstable; urgency=medium

  * Fix reported version number (#16)

-- Patrick Schratz <patrick.schratz@gmail.com>  Sun, 23 Jan 2022 19:44:15 +0100

rcli (0.5.0-1) unstable; urgency=medium

  * Allow to force reinstall R versions (#14)
  * Add support for R version aliases (e.g. `release` or `devel`) (#13)
  * Move documentation to "Gitbook" at https://rcli.pat-s.me

-- Patrick Schratz <patrick.schratz@gmail.com>  Sun, 24 Dec 2021 19:44:15 +0100

rcli (0.4.1-1) unstable; urgency=medium

  * Linux: Fix installations from source.

-- Patrick Schratz <patrick.schratz@gmail.com>  Sun, 17 Dec 2021 19:44:15 +0100

rcli (0.4.0-1) unstable; urgency=medium

  * Added r-devel support for Linux
  * Improved/fixed R version switching on macOS
  * Added tests for macOS x86
  * Enabled codecov

-- Patrick Schratz <patrick.schratz@gmail.com>  Sun, 16 Dec 2021 19:44:15 +0100

rcli (0.3.0-1) unstable; urgency=medium
2021-12-11

  * Added support for installing and switching for R devel builds for macOS.

-- Patrick Schratz <patrick.schratz@gmail.com>  Sun, 11 Dec 2021 19:44:15 +0100

rcli (0.2.0-1) unstable; urgency=medium

First "official" release.

  * `rcli` now detects and warns if a user has the homebrew `r` formula installed instead of the cask
  * `rcli` now properly handles switching between x86 and arm64 versions on macOS when only using the system library for R packages- Same as v0.2.0 - added GHA release automation for homebrew.

-- Patrick Schratz <patrick.schratz@gmail.com>  Sun, 09 Dec 2022 19:44:15 +0100

rcli (0.1.0-1) unstable; urgency=medium

  * `rcli` now detects if R is not installed in the first place
  * `rcli` now accounts for non-existent user libraries and preserves existing system library packages
  * `rcli` now prevents from re-installing an already installed R version
  * `rcli` warns first time users that it is required to first install the current version that is in use